--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <iframe 
-      src="https://www.appsheet.com/start/data/REPORTEDERIESGOS-862838252">
+      src="https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False">
     </iframe>
   </body>
 </html>
