--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <title>Reporte de Riesgos</title>
-    <style>
-      html, body {
-        margin: 0;
-        height: 100%;
-        overflow: hidden;
-      }
-      iframe {
-        border: none;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <meta http-equiv="refresh" content="0; URL='https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False'" />
   </head>
   <body>
-    <iframe 
-      src="https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False">
-    </iframe>
+    <p>Redirigiendo a la aplicación... Si no carga, <a href="https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False">haz clic aquí</a>.</p>
   </body>
 </html>
+
