--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte de Riesgos</title>
-    <meta http-equiv="refresh" content="0; URL='https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False'" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #f2f2f2;
+        text-align: center;
+        padding-top: 100px;
+      }
+      a {
+        display: inline-block;
+        padding: 15px 25px;
+        background-color: #0078d7;
+        color: white;
+        text-decoration: none;
+        border-radius: 10px;
+        font-size: 18px;
+      }
+      a:hover {
+        background-color: #005fa3;
+      }
+    </style>
   </head>
   <body>
-    <p>Redirigiendo a la aplicación... Si no carga, <a href="https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False">haz clic aquí</a>.</p>
+    <h2>Acceso a la App de Reporte de Riesgos</h2>
+    <p>Haz clic en el botón para abrir la aplicación:</p>
+    <a href="https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False" target="_blank">
+      Abrir aplicación
+    </a>
   </body>
 </html>
 
