--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <h2>Acceso a la App de Reporte de Riesgos</h2>
     <p>Haz clic en el botón para abrir la aplicación:</p>
-    <a href="https://www.appsheet.com/template/AppDef?appName=REPORTEDERIESGOS-862838252&appId=9426f3de-89f7-4064-990f-f32f00002c27&quickStart=False" target="_blank">
+    <a href="https://www.appsheet.com/start/9426f3de-89f7-4064-990f-f32f00002c27">
       Abrir aplicación
     </a>
   </body>
